Release history for Dist-Zilla-App-Command-dumpwith

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 0.002003, see misc/*.deps* for details
 - develop: +3 ↑3 -1 (recommends: ↓1, suggests: ↑2)
 - test: (recommends: ↓1)

0.002003 2014-10-31T15:02:11Z 567b541
 [Dependencies::Stats]
 - Dependencies changed since 0.002002, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +6 ↑2 -1 (recommends: +1, suggests: ↑2)
 - runtime: ↓1 -2
 - test: +1 (recommends: ↑2)

 [Internals]
 - remove utf8
 - now supports 5.006
 - remove unneeded autoboxing
 - defer all modules possible

 [Metadata]
 - author = kentnl@cpan.org

0.002002 2014-08-15T21:14:38Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - tests augmented.
 - whitespace adjusted.

 [Dependencies::Stats]
 - Dependencies changed since 0.002001, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)
 - test: -3

 [Misc]
 - Improve source side POD to reduce build side whitespace.

 [Tests]
 - update Test::ReportPrereqs

0.002001 2014-07-31T10:07:33Z
 [Bugfix]
 - Fix doc link to screenshot

0.002000 2014-07-31T09:56:35Z
 [00 Major]
 - Changes that may affect hand-operated downstream.

 [01 Toolkit]
 - Switched To ExtUtils::MakeMaker
 - Toolkit dependenecies for "latest" only "recommeneded" instead of required.
 - https://questhub.io/realm/perl/quest/5388cc12bbd0be5b2500011f

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +9 -11 (suggests: +2 -1)
 - runtime: +1 ↑1
 - test: +5 ↓1 (recommends: +3)

0.001000 2013-11-11T13:48:41Z
 - First version.
